# forge-cli

./: .gitignore  README.md  main.py
.claude/: settings.local.json
templetes/: forge.py
templetes/core/: __init__.py  generate.py  registry.py
templetes/templates/: templates.json
templetes/templates/cli-tool/: README.md  main.py  pyproject.toml
templetes/templates/cli-tool/commands/: hello.py  status.py
templetes/templates/cli-tool/utils/: __init__.py  config.py  logger.py
templetes/templates/rest-api/: README.md  main.py  pyproject.toml  requirements.txt
templetes/templates/rest-api/middleware/: __init__.py  logging.py
templetes/templates/rest-api/routes/: __init__.py  items.py  users.py
templetes/templates/rest-api/utils/: __init__.py  config.py  logger.py
