[project]
name = "{{project_name}}"
version = "{{version}}"
description = "{{description}}"
authors = [{ name = "{{author}}" }]
dependencies = [
    "colorama>=0.4.6",
]

[project.scripts]
{{project_name}} = "main:main"

[tool.uv]
python-version = "3.11"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
